fixed - Fixes container deprecation warnings by using `Ember.getOwner()`